modified:   README.md 	modified:   config.example.yaml 	modified:   config.yaml 	new file:   src/cognitive_weaver/__pycache__/__init__.cpython-39.pyc 	new file:   src/cognitive_weaver/__pycache__/ai_inference.cpython-39.pyc 	new file:   src/cognitive_weaver/__pycache__/cli.cpython-39.pyc 	new file:   src/cognitive_weaver/__pycache__/config.cpython-39.pyc 	new file:   src/cognitive_weaver/__pycache__/monitor.cpython-39.pyc 	new file:   src/cognitive_weaver/__pycache__/parser.cpython-39.pyc 	new file:   src/cognitive_weaver/__pycache__/rewriter.cpython-39.pyc 	modified:   src/cognitive_weaver/cli.py 	modified:   src/cognitive_weaver/config.py 	modified:   src/cognitive_weaver/monitor.py 	new file:   tests/test_with_links.md 	new file:   tests/test_with_links.md.bak 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\344\270\252\344\272\272\347\232\204\347\226\276\347\227\205\346\230\257\346\224\273\345\207\273\346\200\247\345\222\214\345\212\233\346\257\224\345\244\232\346\212\225\346\263\250\346\210\226\346\212\225\346\263\250\346\226\271\345\274\217\345\207\272\344\272\206\351\227\256\351\242\230.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\347\272\247\350\257\215\346\261\207\344\272\214\347\272\247\350\257\215\346\261\207\357\274\210\346\224\273\345\207\273\346\200\247and\345\256\211\345\205\250\346\204\237\343\200\201\350\207\252\345\215\221\357\274\211.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\211\347\261\273\344\272\272.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\272\272\346\240\274\345\234\250\351\235\236\345\270\270\346\227\251\351\235\236\345\270\270\347\237\255\347\232\204\346\227\266\351\227\264\345\275\242\346\210\220.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\272\272\346\264\273\347\235\200\347\232\204\345\233\233\344\270\252\351\251\261\345\212\250.md" 	new file:   "tests/\347\

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -27,6 +27,9 @@ file_monitoring:
   ignore_patterns:
     - "/.git/"
     - "/.obsidian/"
+  folders_to_scan:  # List of folder paths to scan for markdown files
+    - "/path/to/your/folder1"
+    - "/path/to/your/folder2"
 
 max_retries: 3  # Maximum retries for AI calls
 backup_files: true  # Whether to create backups before modifying files
