--- a/config.yaml
+++ b/config.yaml
@@ -26,6 +26,9 @@ file_monitoring:
   ignore_patterns:
     - "/.git/"
     - "/.obsidian/"
+  folders_to_scan:  # List of folder paths to scan for markdown files
+    - "tests/精神分析"
+    - "tests/test_data/test_vault"
 
 max_retries: 3  # Maximum retries for AI calls
 backup_files: true  # Whether to create backups before modifying files
