modified:   src/cognitive_weaver/__init__.py 	modified:   src/cognitive_weaver/__pycache__/__init__.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/ai_inference.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/cli.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/config.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/keyword_extractor.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/knowledge_graph.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/monitor.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/parser.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/rewriter.cpython-39.pyc 	modified:   src/cognitive_weaver/ai_inference.py 	modified:   src/cognitive_weaver/cli.py 	modified:   src/cognitive_weaver/config.py 	modified:   src/cognitive_weaver/keyword_extractor.py 	modified:   src/cognitive_weaver/knowledge_graph.py 	modified:   src/cognitive_weaver/monitor.py 	modified:   src/cognitive_weaver/parser.py 	modified:   src/cognitive_weaver/rewriter.py 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\272\272\346\264\273\347\235\200\347\232\204\345\233\233\344\270\252\351\251\261\345\212\250.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\272\272\346\264\273\347\235\200\347\232\204\345\233\233\344\270\252\351\251\261\345\212\250.md.bak" 	modified:   user_knowledge_graph.json

--- a/user_knowledge_graph.json
+++ b/user_knowledge_graph.json
@@ -1,482 +1,32 @@
 {
   "nodes": [
     {
-      "id": "test_new_links",
-      "label": "test_new_links",
+      "id": "人活着的四个驱动",
+      "label": "人活着的四个驱动",
       "type": "concept",
       "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.506700",
-      "last_updated": "2025-09-04T10:57:38.512751",
-      "occurrences": 9
-    },
-    {
-      "id": "无意识",
-      "label": "无意识",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.506700",
-      "last_updated": "2025-09-04T10:57:38.530518",
-      "occurrences": 10
-    },
-    {
-      "id": "行为",
-      "label": "行为",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.507704",
-      "last_updated": "2025-09-04T10:57:38.507704",
+      "first_seen": "2025-09-04T11:39:30.690068",
+      "last_updated": "2025-09-04T11:39:30.690068",
       "occurrences": 1
     },
     {
-      "id": "决策",
-      "label": "决策",
+      "id": "攻击性",
+      "label": "攻击性",
       "type": "concept",
       "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.508854",
-      "last_updated": "2025-09-04T10:57:38.508854",
-      "occurrences": 1
-    },
-    {
-      "id": "定义概念",
-      "label": "定义概念",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.508854",
-      "last_updated": "2025-09-04T10:57:38.535321",
-      "occurrences": 6
-    },
-    {
-      "id": "引出主题",
-      "label": "引出主题",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.509987",
-      "last_updated": "2025-09-04T10:57:38.509987",
-      "occurrences": 1
-    },
-    {
-      "id": "梦",
-      "label": "梦",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.509987",
-      "last_updated": "2025-09-04T10:57:38.536767",
-      "occurrences": 3
-    },
-    {
-      "id": "举例说明",
-      "label": "举例说明",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.511406",
-      "last_updated": "2025-09-04T10:57:38.538772",
-      "occurrences": 3
-    },
-    {
-      "id": "心理学",
-      "label": "心理学",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.511406",
-      "last_updated": "2025-09-04T10:57:38.544924",
-      "occurrences": 5
-    },
-    {
-      "id": "test_with_links",
-      "label": "test_with_links",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.513756",
-      "last_updated": "2025-09-04T10:57:38.521578",
-      "occurrences": 9
-    },
-    {
-      "id": "简单提及",
-      "label": "简单提及",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.514756",
-      "last_updated": "2025-09-04T10:57:38.546930",
-      "occurrences": 4
-    },
-    {
-      "id": "精神分析",
-      "label": "精神分析",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.517147",
-      "last_updated": "2025-09-04T10:57:38.517147",
-      "occurrences": 1
-    },
-    {
-      "id": "弗洛伊德",
-      "label": "弗洛伊德",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.519422",
-      "last_updated": "2025-09-04T10:57:38.519422",
-      "occurrences": 1
-    },
-    {
-      "id": "感受",
-      "label": "感受",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.522577",
-      "last_updated": "2025-09-04T10:57:38.522577",
-      "occurrences": 1
-    },
-    {
-      "id": "属于分类",
-      "label": "属于分类",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.528198",
-      "last_updated": "2025-09-04T10:57:38.532976",
-      "occurrences": 2
-    },
-    {
-      "id": "测试笔记",
-      "label": "测试笔记",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.530518",
-      "last_updated": "2025-09-04T10:57:38.538772",
-      "occurrences": 6
-    },
-    {
-      "id": "创伤性事件即诱因",
-      "label": "创伤性事件即诱因",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.541278",
-      "last_updated": "2025-09-04T10:57:38.546930",
-      "occurrences": 6
-    },
-    {
-      "id": "童年创伤",
-      "label": "童年创伤",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.541278",
-      "last_updated": "2025-09-04T10:57:38.541278",
-      "occurrences": 1
-    },
-    {
-      "id": "炸药",
-      "label": "炸药",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.542307",
-      "last_updated": "2025-09-04T10:57:38.542307",
-      "occurrences": 1
-    },
-    {
-      "id": "诱因",
-      "label": "诱因",
-      "type": "concept",
-      "importance": 1.0,
-      "first_seen": "2025-09-04T10:57:38.545931",
-      "last_updated": "2025-09-04T10:57:38.545931",
+      "first_seen": "2025-09-04T11:39:30.691068",
+      "last_updated": "2025-09-04T11:39:30.691068",
       "occurrences": 1
     }
   ],
   "edges": [
     {
-      "source": "test_new_links",
-      "target": "无意识",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.506700",
-      "last_updated": "2025-09-04T10:57:38.506700",
-      "occurrences": 1
-    },
-    {
-      "source": "test_new_links",
-      "target": "行为",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.507704",
-      "last_updated": "2025-09-04T10:57:38.507704",
-      "occurrences": 1
-    },
-    {
-      "source": "test_new_links",
-      "target": "决策",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.508854",
-      "last_updated": "2025-09-04T10:57:38.508854",
-      "occurrences": 1
-    },
-    {
-      "source": "test_new_links",
-      "target": "定义概念",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.508854",
-      "last_updated": "2025-09-04T10:57:38.512751",
-      "occurrences": 2
-    },
-    {
-      "source": "test_new_links",
-      "target": "引出主题",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.509987",
-      "last_updated": "2025-09-04T10:57:38.509987",
-      "occurrences": 1
-    },
-    {
-      "source": "test_new_links",
-      "target": "梦",
-      "relationship": "举例说明",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.509987",
-      "last_updated": "2025-09-04T10:57:38.509987",
-      "occurrences": 1
-    },
-    {
-      "source": "test_new_links",
-      "target": "举例说明",
-      "relationship": "举例说明",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.511406",
-      "last_updated": "2025-09-04T10:57:38.511406",
-      "occurrences": 1
-    },
-    {
-      "source": "test_new_links",
-      "target": "心理学",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.511406",
-      "last_updated": "2025-09-04T10:57:38.511406",
-      "occurrences": 1
-    },
-    {
-      "source": "test_with_links",
-      "target": "心理学",
+      "source": "人活着的四个驱动",
+      "target": "攻击性",
       "relationship": "简单提及",
       "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.513756",
-      "last_updated": "2025-09-04T10:57:38.513756",
-      "occurrences": 1
-    },
-    {
-      "source": "test_with_links",
-      "target": "简单提及",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.514756",
-      "last_updated": "2025-09-04T10:57:38.520570",
-      "occurrences": 2
-    },
-    {
-      "source": "test_with_links",
-      "target": "无意识",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.515755",
-      "last_updated": "2025-09-04T10:57:38.515755",
-      "occurrences": 1
-    },
-    {
-      "source": "test_with_links",
-      "target": "精神分析",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.517147",
-      "last_updated": "2025-09-04T10:57:38.517147",
-      "occurrences": 1
-    },
-    {
-      "source": "test_with_links",
-      "target": "定义概念",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.518414",
-      "last_updated": "2025-09-04T10:57:38.518414",
-      "occurrences": 1
-    },
-    {
-      "source": "test_with_links",
-      "target": "弗洛伊德",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.519422",
-      "last_updated": "2025-09-04T10:57:38.519422",
-      "occurrences": 1
-    },
-    {
-      "source": "test_with_links",
-      "target": "无意识",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.519422",
-      "last_updated": "2025-09-04T10:57:38.519422",
-      "occurrences": 1
-    },
-    {
-      "source": "test_with_links",
-      "target": "定义概念",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.521578",
-      "last_updated": "2025-09-04T10:57:38.521578",
-      "occurrences": 1
-    },
-    {
-      "source": "无意识",
-      "target": "感受",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.522577",
-      "last_updated": "2025-09-04T10:57:38.522577",
-      "occurrences": 1
-    },
-    {
-      "source": "无意识",
-      "target": "定义概念",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.523777",
-      "last_updated": "2025-09-04T10:57:38.523777",
-      "occurrences": 1
-    },
-    {
-      "source": "无意识",
-      "target": "梦",
-      "relationship": "举例说明",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.524782",
-      "last_updated": "2025-09-04T10:57:38.524782",
-      "occurrences": 1
-    },
-    {
-      "source": "无意识",
-      "target": "举例说明",
-      "relationship": "举例说明",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.525785",
-      "last_updated": "2025-09-04T10:57:38.525785",
-      "occurrences": 1
-    },
-    {
-      "source": "无意识",
-      "target": "心理学",
-      "relationship": "属于分类",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.526791",
-      "last_updated": "2025-09-04T10:57:38.526791",
-      "occurrences": 1
-    },
-    {
-      "source": "无意识",
-      "target": "属于分类",
-      "relationship": "属于分类",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.528198",
-      "last_updated": "2025-09-04T10:57:38.528198",
-      "occurrences": 1
-    },
-    {
-      "source": "测试笔记",
-      "target": "无意识",
-      "relationship": "属于分类",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.530518",
-      "last_updated": "2025-09-04T10:57:38.530518",
-      "occurrences": 1
-    },
-    {
-      "source": "测试笔记",
-      "target": "属于分类",
-      "relationship": "属于分类",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.532976",
-      "last_updated": "2025-09-04T10:57:38.532976",
-      "occurrences": 1
-    },
-    {
-      "source": "测试笔记",
-      "target": "心理学",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.533984",
-      "last_updated": "2025-09-04T10:57:38.533984",
-      "occurrences": 1
-    },
-    {
-      "source": "测试笔记",
-      "target": "定义概念",
-      "relationship": "定义概念",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.535321",
-      "last_updated": "2025-09-04T10:57:38.535321",
-      "occurrences": 1
-    },
-    {
-      "source": "测试笔记",
-      "target": "梦",
-      "relationship": "举例说明",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.536767",
-      "last_updated": "2025-09-04T10:57:38.536767",
-      "occurrences": 1
-    },
-    {
-      "source": "测试笔记",
-      "target": "举例说明",
-      "relationship": "举例说明",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.538772",
-      "last_updated": "2025-09-04T10:57:38.538772",
-      "occurrences": 1
-    },
-    {
-      "source": "创伤性事件即诱因",
-      "target": "童年创伤",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.541278",
-      "last_updated": "2025-09-04T10:57:38.541278",
-      "occurrences": 1
-    },
-    {
-      "source": "创伤性事件即诱因",
-      "target": "炸药",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.542307",
-      "last_updated": "2025-09-04T10:57:38.542307",
-      "occurrences": 1
-    },
-    {
-      "source": "创伤性事件即诱因",
-      "target": "简单提及",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.543442",
-      "last_updated": "2025-09-04T10:57:38.548038",
-      "occurrences": 2
-    },
-    {
-      "source": "创伤性事件即诱因",
-      "target": "心理学",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.544924",
-      "last_updated": "2025-09-04T10:57:38.544924",
-      "occurrences": 1
-    },
-    {
-      "source": "创伤性事件即诱因",
-      "target": "诱因",
-      "relationship": "简单提及",
-      "strength": 1.0,
-      "first_seen": "2025-09-04T10:57:38.545931",
-      "last_updated": "2025-09-04T10:57:38.545931",
+      "first_seen": "2025-09-04T11:39:30.691068",
+      "last_updated": "2025-09-04T11:39:30.691068",
       "occurrences": 1
     }
   ]
