modified:   src/cognitive_weaver/__pycache__/ai_inference.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/rewriter.cpython-39.pyc 	modified:   src/cognitive_weaver/ai_inference.py 	modified:   src/cognitive_weaver/rewriter.py 	new file:   testcom.md 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\344\270\252\344\272\272\347\232\204\347\226\276\347\227\205\346\230\257\346\224\273\345\207\273\346\200\247\345\222\214\345\212\233\346\257\224\345\244\232\346\212\225\346\263\250\346\210\226\346\212\225\346\263\250\346\226\271\345\274\217\345\207\272\344\272\206\351\227\256\351\242\230.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\344\270\252\344\272\272\347\232\204\347\226\276\347\227\205\346\230\257\346\224\273\345\207\273\346\200\247\345\222\214\345\212\233\346\257\224\345\244\232\346\212\225\346\263\250\346\210\226\346\212\225\346\263\250\346\226\271\345\274\217\345\207\272\344\272\206\351\227\256\351\242\230.md.bak" 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\347\272\247\350\257\215\346\261\207\344\272\214\347\272\247\350\257\215\346\261\207\357\274\210\346\224\273\345\207\273\346\200\247and\345\256\211\345\205\250\346\204\237\343\200\201\350\207\252\345\215\221\357\274\211.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\347\272\247\350\257\215\346\261\207\344\272\214\347\272\247\350\257\215\346\261\207\357\274\210\346\224\273\345\207\273\346\200\247and\345\256\211\345\205\250\346\204\237\343\200\201\350\207\252\345\215\221\357\274\211.md.bak" 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\211\347\261\273\344\272\272.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\211\347\261\273\344\272\272.md.bak" 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\272\272\346\240\274\345\234\250\351\235\236\345\270\270\346\227\251\351\2

--- a/user_knowledge_graph.json
+++ b/user_knowledge_graph.json
@@ -6,8 +6,8 @@
       "type": "concept",
       "importance": 1.0,
       "first_seen": "2025-09-04T11:39:30.690068",
-      "last_updated": "2025-09-04T11:39:30.690068",
-      "occurrences": 1
+      "last_updated": "2025-09-07T20:07:48.113610",
+      "occurrences": 11
     },
     {
       "id": "攻击性",
@@ -15,7 +15,133 @@
       "type": "concept",
       "importance": 1.0,
       "first_seen": "2025-09-04T11:39:30.691068",
-      "last_updated": "2025-09-04T11:39:30.691068",
+      "last_updated": "2025-09-07T20:07:48.130264",
+      "occurrences": 7
+    },
+    {
+      "id": "测试链接关系",
+      "label": "测试链接关系",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.131528",
+      "last_updated": "2025-09-07T20:07:48.154431",
+      "occurrences": 32
+    },
+    {
+      "id": "性驱力",
+      "label": "性驱力",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.131528",
+      "last_updated": "2025-09-07T20:07:48.118427",
+      "occurrences": 4
+    },
+    {
+      "id": "关系驱动",
+      "label": "关系驱动",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.134449",
+      "last_updated": "2025-09-07T20:07:48.121868",
+      "occurrences": 4
+    },
+    {
+      "id": "自恋",
+      "label": "自恋",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.137301",
+      "last_updated": "2025-09-07T20:07:48.126732",
+      "occurrences": 4
+    },
+    {
+      "id": "创伤性事件",
+      "label": "创伤性事件",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.148919",
+      "last_updated": "2025-09-07T20:07:48.128814",
+      "occurrences": 2
+    },
+    {
+      "id": "力比多",
+      "label": "力比多",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.164337",
+      "last_updated": "2025-09-07T20:07:48.137185",
+      "occurrences": 4
+    },
+    {
+      "id": "唠叨",
+      "label": "唠叨",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.165470",
+      "last_updated": "2025-09-07T20:07:48.136452",
+      "occurrences": 2
+    },
+    {
+      "id": "口欲期",
+      "label": "口欲期",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.169649",
+      "last_updated": "2025-09-07T20:07:48.138584",
+      "occurrences": 2
+    },
+    {
+      "id": "防御机制",
+      "label": "防御机制",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.181097",
+      "last_updated": "2025-09-07T20:07:48.142941",
+      "occurrences": 2
+    },
+    {
+      "id": "人格",
+      "label": "人格",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.183319",
+      "last_updated": "2025-09-07T20:07:48.144950",
+      "occurrences": 3
+    },
+    {
+      "id": "疾病",
+      "label": "疾病",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.184818",
+      "last_updated": "2025-09-07T20:07:48.146853",
+      "occurrences": 2
+    },
+    {
+      "id": "无意识",
+      "label": "无意识",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.197122",
+      "last_updated": "2025-09-07T20:07:48.151332",
+      "occurrences": 4
+    },
+    {
+      "id": "感受",
+      "label": "感受",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:02.201377",
+      "last_updated": "2025-09-07T20:07:48.154431",
+      "occurrences": 2
+    },
+    {
+      "id": "心理健康",
+      "label": "心理健康",
+      "type": "concept",
+      "importance": 1.0,
+      "first_seen": "2025-09-07T20:07:48.113610",
+      "last_updated": "2025-09-07T20:07:48.113610",
       "occurrences": 1
     }
   ],
@@ -26,7 +152,169 @@
       "relationship": "简单提及",
       "strength": 1.0,
       "first_seen": "2025-09-04T11:39:30.691068",
-      "last_updated": "2025-09-04T11:39:30.691068",
+      "last_updated": "2025-09-07T20:07:48.080524",
+      "occurrences": 3
+    },
+    {
+      "source": "测试链接关系",
+      "target": "性驱力",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.131528",
+      "last_updated": "2025-09-07T20:07:48.118427",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "攻击性",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.132990",
+      "last_updated": "2025-09-07T20:07:48.130264",
+      "occurrences": 4
+    },
+    {
+      "source": "测试链接关系",
+      "target": "关系驱动",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.134449",
+      "last_updated": "2025-09-07T20:07:48.121868",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "自恋",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.137301",
+      "last_updated": "2025-09-07T20:07:48.126732",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "创伤性事件",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.148919",
+      "last_updated": "2025-09-07T20:07:48.128814",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "力比多",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.164337",
+      "last_updated": "2025-09-07T20:07:48.137185",
+      "occurrences": 4
+    },
+    {
+      "source": "测试链接关系",
+      "target": "唠叨",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.165470",
+      "last_updated": "2025-09-07T20:07:48.136452",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "口欲期",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.169649",
+      "last_updated": "2025-09-07T20:07:48.138584",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "防御机制",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.181097",
+      "last_updated": "2025-09-07T20:07:48.142941",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "人格",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.183319",
+      "last_updated": "2025-09-07T20:07:48.144950",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "疾病",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.184818",
+      "last_updated": "2025-09-07T20:07:48.146853",
+      "occurrences": 2
+    },
+    {
+      "source": "测试链接关系",
+      "target": "无意识",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.197122",
+      "last_updated": "2025-09-07T20:07:48.151332",
+      "occurrences": 4
+    },
+    {
+      "source": "测试链接关系",
+      "target": "感受",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:02.201377",
+      "last_updated": "2025-09-07T20:07:48.154431",
+      "occurrences": 2
+    },
+    {
+      "source": "人活着的四个驱动",
+      "target": "性驱力",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:48.056764",
+      "last_updated": "2025-09-07T20:07:48.078582",
+      "occurrences": 2
+    },
+    {
+      "source": "人活着的四个驱动",
+      "target": "关系驱动",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:48.063631",
+      "last_updated": "2025-09-07T20:07:48.088696",
+      "occurrences": 2
+    },
+    {
+      "source": "人活着的四个驱动",
+      "target": "自恋",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:48.063631",
+      "last_updated": "2025-09-07T20:07:48.096929",
+      "occurrences": 2
+    },
+    {
+      "source": "人活着的四个驱动",
+      "target": "人格",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:48.109022",
+      "last_updated": "2025-09-07T20:07:48.109022",
+      "occurrences": 1
+    },
+    {
+      "source": "人活着的四个驱动",
+      "target": "心理健康",
+      "relationship": "简单提及",
+      "strength": 1.0,
+      "first_seen": "2025-09-07T20:07:48.113610",
+      "last_updated": "2025-09-07T20:07:48.113610",
       "occurrences": 1
     }
   ]
